--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "bcryptjs": "^3.0.3",
     "express": "^5.2.1",
     "fs": "^0.0.1-security",
@@ -16,6 +17,7 @@
     "https-proxy-agent": "^7.0.6",
     "jose": "^6.1.3",
     "lowdb": "^7.0.1",
+    "monaco-editor": "^0.55.1",
     "next": "^15.2.0",
     "node-machine-id": "^1.1.12",
     "open": "^10.1.0",
